--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @import "./tailwind.css";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&family=Lato:wght@300;400;700;900&family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900;6..12,1000&family=Nunito:wght@200;300;400;500;600;700;800;900&family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700;800;900&family=Raleway:wght@200;300;400;500;600;700;800;900&family=Rethink+Sans:wght@400;500;600;700;800&family=Roboto:wght@100;400;500;700;900&display=swap");
 :root {
-  font-family: "Poppins", system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-weight: 400;
+  --fontPoppins: 'Poppins', sans-serif;
+  --bgPage: #f5f5f5;
+  font-family: var(--fontPoppins);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -11,9 +13,7 @@
 html,
 body {
   scroll-behavior: smooth;
-  height: 1600px;
-  background-color: #f5f5f5;
-  height: 1300px;
+  background-color: var(--bgPage);
 }
 .homePage {
   background-image: url("/img/back.jpg");
@@ -33,18 +33,6 @@ p {
   background-size: cover;
   background-position: center center;
 }
-.card-one {
-  background-image: url("/img/mobilia.jpg");
-}
-.card-two {
-  background-image: url("/img/food.jpg");
-}
-.card-three {
-  background-image: url("/img/domesticos.jpg");
-}
-.card-four {
-  background-image: url("/img/woman.jpg");
-}
 
 .card__image {
   background-position: center center;
@@ -52,18 +40,7 @@ p {
   background-size: cover;
   transition: transform 1s ease-in-out;
 }
-/* .card__image:nth-child(1) {
-  background-image: url("/img/cos1.jpg");
-}
-.card__image:nth-child(2) {
-  background-image: url("/img/cos2.jpg");
-}
-.card__image:nth-child(3) {
-  background-image: url("/img/cos3.jpg");
-}
-.card__image:nth-child(4) {
-  background-image: url("/img/cos4.jpg");
-} */
+
 .animationDown {
   animation: cardDownAnimation 0.6s 0.4s ease-in-out forwards;
 }
@@ -80,14 +57,16 @@ p {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  
 }
-.cardTalho:hover .maskTalho{
+.cardTalho:hover .maskTalho {
   background-color: transparent;
 }
-.maskTalho{
-  transition: all .15s ease-in-out;
-  background-color: rgba(0,0,0,0.5)
+.maskTalho {
+  transition: all 0.15s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.icon_boot {
+  font-size: 1.2rem;
 }
 @keyframes cardDownAnimation {
   from {
