--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&family=Lato:wght@300;400;700;900&family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900;6..12,1000&family=Nunito:wght@200;300;400;500;600;700;800;900&family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700;800;900&family=Raleway:wght@200;300;400;500;600;700;800;900&family=Rethink+Sans:wght@400;500;600;700;800&family=Roboto:wght@100;400;500;700;900&display=swap");
 :root {
-  --fontPoppins: 'Poppins', sans-serif;
+  --fontPoppins: "Poppins", sans-serif;
   --bgPage: #f5f5f5;
   font-family: var(--fontPoppins);
   font-synthesis: none;
@@ -67,6 +67,72 @@ p {
 }
 .icon_boot {
   font-size: 1.2rem;
+}
+.backMask {
+  background-color: transparent;
+}
+.text_wating,
+.icon_wating {
+  opacity: 0.4;
+  animation: loadingEffect 0.9s ease-in-out alternate infinite;
+}
+.cardSearch {
+  transition: transform 0.4s ease-in-out;
+  transform: translateY(-200%);
+}
+.cardSearch_visible {
+  animation: cardSearchAnimation 1s 0.5s ease-in-out forwards;
+}
+.cardSearch_unvisible {
+  animation: cardSearchAnimationOff  .5s ease-in-out forwards;
+}
+.backMask_on {
+  animation: backMaskAnimation 0.15s 0.16s ease-in-out forwards;
+}
+.backMask_off {
+  animation: backMaskAnimationOff .5s 0.16s ease-in-out forwards;
+}
+@keyframes backMaskAnimation {
+  0% {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  50% {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  100% {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+}
+@keyframes backMaskAnimationOff {
+  from{
+    display: inline-block;
+  }to{
+    display: none;
+  }
+}
+@keyframes cardSearchAnimation {
+  from {
+    transform: translateY(-200%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
+@keyframes cardSearchAnimationOff {
+  from {
+    transform: translateY(0%);
+  }
+  to {
+    transform: translateY(-200%);
+  }
+}
+@keyframes loadingEffect {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 @keyframes cardDownAnimation {
   from {
